[package]
name = "qr_transfer"
version = "0.1.0"
authors = ["Alex <alexmeli100@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
dirs = "1.0.5"
actix-web = "0.7.19"
actix = "0.7.1"
structopt = "0.2.15"
rand = "0.6.5"
mime = "0.3.13"
ipconfig = "0.1.9"
zip = "0.5.2"
qr2term = "0.1.2"
walkdir = "2.2.7"

